# scos-actions

./: .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  DEVELOPING.md  GitHubRepoPublicReleaseApproval.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sample_debug.py  setup.py  tox.ini
.github/workflows/: tox.yaml
scos_actions/: __init__.py  calibration.py  settings.py  signals.py  status_monitor.py  utils.py
scos_actions/actions/: SystemExitAction.py  __init__.py  acquire_sea_data_product.py  acquire_sea_data_product_hybrid_sampling.py  acquire_single_freq_apd.py  acquire_single_freq_fft.py  acquire_single_freq_gps.py  acquire_single_freq_tdomain_iq.py  acquire_stepped_freq_tdomain_iq.py  acquire_tdomain_iq_subdev.py  action_utils.py  calibrate_y_factor.py  calibrate_y_factor_hybrid_sampling.py  disconnect.py  fft.py  logger.py  measurement_params.py  monitor_radio.py  monitor_sigan.py  power_analysis.py  reconnect.py  runtime_error_action.py  runtime_exception.py  seg_fault.py  set_switch_states.py  sigmf_builder.py  sync_gps.py  system_exit_action.py  transmit_cw.py  transmit_pn.py
scos_actions/actions/interfaces/: action.py  measurement_action.py  signals.py
scos_actions/actions/metadata/: calibration_annotation.py  fft_annotation.py  measurement_global.py  metadata.py  sensor_annotation.py  time_domain_annotation.py
scos_actions/actions/metadata/annotations/: calibration_annotation.py  fft_annotation.py  sensor_annotation.py  time_domain_annotation.py
scos_actions/actions/metadata_decorators/: calibration_annotation.py  calibration_annotation_decorator.py  fft_annotation.py  fft_annotation_decorator.py  measurement_global.py  measurement_global_deocorator.py  metadata_decorator.py  sensor_annotation.py  sensor_annotation_decorator.py  time_domain_annotation.py  time_domain_annotation_decorator.py
scos_actions/actions/preselector_control/: enable_antenna.py  enable_noise_diode_off.py  enable_noise_diode_on.py
scos_actions/actions/tests/: test_acquire_single_freq_apd.py  test_acquire_single_freq_fft.py  test_calibration.py  test_monitor_radio.py  test_monitor_sigan.py  test_preselector.py  test_single_freq_tdomain_iq.py  test_stepped_freq_tdomain_iq.py  test_sync_gps.py  utils.py
scos_actions/actions/tests/resources/: utils.py
scos_actions/calibration/: __init__.py  calibration.py  differential_calibration.py  sensor_calibration.py  utils.py
scos_actions/calibration/interfaces/: calibration.py
scos_actions/calibration/tests/: test_calibration.py  test_differential_calibration.py  test_sensor_calibration.py  test_utils.py  utils.py
scos_actions/capabilities/: __init__.py
scos_actions/configs/: README.md  sensor_calibration_example.json  sigan_calibration_example.json
scos_actions/configs/actions/: acquire_751MHz_gps.yml  acquire_CW_TM_01.yml  acquire_CW_TM_01_AB.yml  acquire_CW_TM_02.yml  acquire_CW_TM_02_AB.yml  acquire_CW_TM_03.yml  acquire_CW_TM_03_AB.yml  acquire_CW_TM_03_GH5.yml  acquire_CW_TM_04.yml  acquire_CW_TM_04_AB.yml  acquire_CW_TM_05.yml  acquire_CW_TM_05_AB.yml  acquire_CW_TM_AA_GPS.yml  acquire_CW_TM_AA_internal.yml  acquire_CW_TM_AB_GPS.yml  acquire_CW_TM_AB_GPS_40.yml  acquire_CW_TM_AB_internal.yml  acquire_CW_TM_internal.yml  acquire_CW_home_01.yml  acquire_CW_lab_AB_GPS_35_10.yml  acquire_CW_lab_AB_GPS_35_5-10.yml  acquire_CW_lab_AB_GPS_35_5.yml  acquire_TM_10MHz_high.yml  acquire_TM_10MHz_low.yml  acquire_TM_5MHz_high.yml  acquire_TM_5MHz_low.yml  acquire_TM_AA_GPS_10M.yml  acquire_TM_AA_GPS_20M.yml  acquire_TM_AA_GPS_40M.yml  acquire_TM_AA_GPS_56M.yml  acquire_TM_AA_GPS_5M.yml  acquire_TM_AB_GPS_10M.yml  acquire_TM_AB_GPS_20M.yml  acquire_TM_AB_GPS_40M.yml  acquire_TM_AB_GPS_56M.yml  acquire_TM_AB_GPS_5M.yml  acquire_home_10MHz_high.yml  acquire_iq_5GHz_01.yml  acquire_iq_5GHz_02.yml  acquire_iq_700MHz_ATT_DL_gps.yml  (+172 more)
scos_actions/core/: __init__.py  signal_analyzer_monitor.py  status_monitor.py
scos_actions/discover/: __init__.py  yaml.py
scos_actions/discover/tests/: test_sigan_registration.py  test_yaml.py
scos_actions/hardware/: __init__.py  gps_iface.py  gps_registration_handler.py  hardware_configuration_exception.py  radio_iface.py  scos_sensor_exception.py  sensor.py  sigan_iface.py  signal_analyzer_monitor.py  signal_analyzer_registration_handler.py  utils.py
scos_actions/hardware/mocks/: mock_gps.py  mock_radio.py  mock_sensor.py  mock_sigan.py
scos_actions/hardware/tests/: test_gps_registration.py  test_preselector.py  test_sensor.py  test_sigan.py  test_sigan_registration.py  test_status_handler.py
scos_actions/initialization/: __init__.py
scos_actions/metadata/: annotation_segment.py  measurement_global.py  metadata.py  metadata_exception.py  sigmf_builder.py  utils.py
scos_actions/metadata/annotations/: __init__.py  calibration_annotation.py  fft_annotation.py  frequency_domain_detection.py  probability_distribution_annotation.py  sea_data_product_annotation.py  sensor_annotation.py  time_domain_annotation.py  time_domain_detection.py
scos_actions/metadata/interfaces/: annotation.py  capture.py  ntia_algorithm.py  ntia_core.py  ntia_diagnostics.py  ntia_environment.py  ntia_scos.py  ntia_sensor.py  sigmf_object.py
scos_actions/metadata/structs/: capture.py  ntia_algorithm.py  ntia_core.py  ntia_diagnostics.py  ntia_environment.py  ntia_scos.py  ntia_sensor.py
scos_actions/scripts/: add_interpolated_cal.py
scos_actions/signal_processing/: __init__.py  apd.py  calibration.py  fft.py  filtering.py  power_analysis.py  unit_conversion.py  utils.py
scos_actions/signal_processing/tests/: test_apd.py  test_calibration.py  test_fft.py  test_filtering.py  test_power_analysis.py  test_unit_conversion.py
scos_actions/status/: __init__.py  signal_analyzer_registration_handler.py  status_monitor.py  status_registration_handler.py
scos_actions/tests/: test_apd.py  test_calibration.py  test_utils.py
scos_actions/tests/resources/: utils.py
