[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scos-actions"
dynamic = ["version", "description"]
readme = { file = "README.md" }
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name = "Doug Boulware", email = "dboulware@ntia.gov" },
    { name = "Justin Haze", email = "jhaze@ntia.gov" },
    { name = "Anthony Romaniello", email = "aromaniello@ntia.gov" },
]

keywords = [
    "SCOS", "SDR", "spectrum monitoring", "radio", "sensor",
    "spectrum", "monitoring", "remote", "distributed", "sensing",
    "NTIA", "ITS", "telecommunications",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "django>3.2.14,<4.0",
    "its_preselector @ https://github.com/NTIA/Preselector/archive/refs/tags/1.0.0.zip",
    "numexpr>=2.8.3",
    "numpy>=1.22.0",
    "python-dateutil>=2.0",
    "ruamel.yaml>=0.15",
    "scipy>=1.8.0",
    "sigmf @ https://github.com/NTIA/SigMF/archive/refs/heads/multi-recording-archive.zip"
]

[project.optional-dependencies]
dev = [
    "flit>=3.4,<4",
    "pre-commit>=2.20.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "tox>=3.0",
]

[project.urls]
"Repository" = "https://github.com/NTIA/scos-actions"
"Bug Tracker" = "https://github.com/NTIA/scos-actions/issues"
"SCOS Sensor" = "https://github.com/NTIA/scos-sensor"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"

[tool.flit.module]
name = "scos_actions"
