[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scos-actions"
dynamic = ["version"]
description = "The base plugin providing common actions and interfaces for SCOS Sensor plugins"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name = "Doug Boulware", email = "dboulware@ntia.gov" },
    { name = "Justin Haze", email = "jhaze@ntia.gov" },
    { name = "Anthony Romaniello", email = "aromaniello@ntia.gov" },
]

keywords = [
    "SCOS", "SDR", "spectrum monitoring", "radio", "sensor",
    "spectrum", "monitoring", "remote", "distributed", "sensing",
    "NTIA", "ITS", "telecommunications",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "environs>=9.5.0",
    "django>=3.2.18,<4.0",
    "its_preselector @ git+https://github.com/NTIA/Preselector@3.0.2",
    "msgspec>=0.16.0,<1.0.0",
    "numexpr>=2.8.3",
    "numpy>=1.22.0",
    "psutil>=5.9.4",
    "python-dateutil>=2.0",
    "ray>=2.6.3,<2.8.0",
    "ruamel.yaml>=0.15",
    "scipy>=1.8.0",
    "sigmf @ git+https://github.com/NTIA/SigMF@multi-recording-archive",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1,<8.0",
    "pytest-cov>=4.0.0,<5.0",
    "tox>=4.5.1,<5.0",
]
dev = [
    "hatchling>=1.14.1,<2.0",
    "pre-commit>=3.3.1,<4.0",
    "ray[default]>=2.4.0",
    "scos-actions[test]",
]

[project.urls]
"Repository" = "https://github.com/NTIA/scos-actions"
"Bug Tracker" = "https://github.com/NTIA/scos-actions/issues"
"SCOS Sensor" = "https://github.com/NTIA/scos-sensor"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "scos_actions/__init__.py"
